Added and styled navigation bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
 	</header>
 	<body>
 
+		<nav>
+		<img src="http://www.placehold.it/180x35" alt="The Register logo">
+		<ul>
+			<li><a href="#" id="active">Home</a></li>
+			<li><a href="#">News</a></li>
+			<li><a href="#">Checkout</a></li>
+			<li><a href="#">Opinion</a></li>
+			<li><a href="#">Technology</a></li>
+			<li><a href="#">Property</a></li>
+			<li><a href="#">Who's where</a></li>
+			<li><a href="#">Features</a></li>
+		</ul>
+
+			<a href="#">Sign up</a>
+			<a href="#">About</a>
+			<a href="#">Advertise</a>
+
+		</nav>
 	<!-- main content goes here -->
 
 	</body>
