Added a few articles

--- a/index.html
+++ b/index.html
@@ -28,5 +28,39 @@
 		</nav>
 	<!-- main content goes here -->
 
+		<main>
+			<aside>
+				<img src="http://placehold.it/728x90" alt="Ad">
+				<p>Got a story? Email the Editor at link here</p>
+			</aside>
+
+			<hr>
+
+			<article>
+				<h1>How did that happen? The astonishing popularity of coconut water</h1>
+				<img src="http://placehold.it/640x320" alt="">
+				<p>As the long-lasting health and fitness trend intensifies, coconut water has become the latest must-have for clean eaters, paleo dieters and just about everyone else. But where did this trend come from?</p>
+			</article>
+
+			<hr>
+
+			<article>
+				<h1>Sitka debuts new 'cabin' sore on Ponsonby Rd</h1>
+				<img src="http://placehold.it/640x320" alt="">
+				<p>Environmentally friendly clothing and surf brand, Sitka, is bringing a surf shop back to the city-slickers by opening a new store in the hub of Ponsonby. It describes the new store’s look as an “upcycled log cabin” made entirely of repurposed materials.</p>
+			</article>
+
+			<hr>
+
+			<article>
+				<h1>Tourst towns experience sales boom over Easter weekend</h1>
+				<img src="http://placehold.it/640x320" alt="">
+				<p>While a debate was raging over whether shops should open over Easter, stores that did open experienced a sales increase of 13 percent on average. Towns that fared particularly well were tourism hotspots, including Wanaka, Mount Maunganui and Mangawhai.</p>
+			</article>
+
+
+		</main>
+
+
 	</body>
 </html>
