--- a/index.html
+++ b/index.html
@@ -58,6 +58,24 @@
 				<p>While a debate was raging over whether shops should open over Easter, stores that did open experienced a sales increase of 13 percent on average. Towns that fared particularly well were tourism hotspots, including Wanaka, Mount Maunganui and Mangawhai.</p>
 			</article>
 
+			<article class="related">
+				<h1> Topics</h1>
+
+				<div>
+					<img src="http://placehold.it/200x200" alt="">	
+					<a href="#">The innovators | In partnership with spark business</a>
+					<p>Technology is rapidly changing the retail industry as a whole Jessy Edwards speaks with established companies and nimble up-and-comers who see opportunities amidst the chaos, and looks into what the future might hold.</p>
+				</div>
+
+				<div>
+					<img src="http://placehold.it/200x200" alt="">	
+					<a href="#">Retail rogues</a>
+					<p>We put the spotlight on staff training. Jai Breitnauer spoke with a panel of experts about dealing with five types of tricky employee.
+				</div>
+
+				<button id="scroll-left">&lt;</button>
+				<button id="scroll-right">&gt;</button>
+			</article>
 
 		</main>
 
