Style heading with bars

--- a/index.html
+++ b/index.html
@@ -60,17 +60,18 @@
 
 			<article class="related">
 				<h1> Topics</h1>
+				<hr>
 
 				<div>
 					<img src="http://placehold.it/200x200" alt="">	
 					<a href="#">The innovators | In partnership with spark business</a>
-					<p>Technology is rapidly changing the retail industry as a whole Jessy Edwards speaks with established companies and nimble up-and-comers who see opportunities amidst the chaos, and looks into what the future might hold.</p>
+					<p>Technology is rapidly changing the retail industry as...</p>
 				</div>
 
 				<div>
 					<img src="http://placehold.it/200x200" alt="">	
 					<a href="#">Retail rogues</a>
-					<p>We put the spotlight on staff training. Jai Breitnauer spoke with a panel of experts about dealing with five types of tricky employee.
+					<p>We put the spotlight on staff training. Jai...
 				</div>
 
 				<button id="scroll-left">&lt;</button>
