Started work on side content

--- a/index.html
+++ b/index.html
@@ -77,8 +77,20 @@
 				<button id="scroll-left">&lt;</button>
 				<button id="scroll-right">&gt;</button>
 			</article>
-
 		</main>
+
+		<div id="extra">
+			<div id="social">
+				<a href="#">Facebook</a>
+				<a href="#">Twitter</a>
+				<a href="#">Instagram</a>
+				<a href="#">RSS</a>
+			</div>
+			
+			<div id="newsletter">
+				<p>Get the latest retail intelligence in your inbox <a href="#">Sign me up</a>
+			</div>
+		</div>
 
 
 	</body>
