--- a/index.html
+++ b/index.html
@@ -91,7 +91,95 @@
 				<p>Get the latest retail intelligence in your inbox <a href="#">Sign me up</a>
 			</div>
 
-			
+			<div id="left">
+				<section id="comments">
+					<h1>Latest comments</h1>
+				
+					<article>
+						<img src="http://placehold.it/29x29">
+						<p><a href="#">Anna Phillips</a>
+						Good article Des - it was a pleasure working as your Personal Assistant.</p>
+						<a href="#">Half a century in retail: Des Flynn | The Register · 1 day ago</a>
+					</article>
+
+					<article>
+						<img src="http://placehold.it/29x29">
+						<p><a href="#">Vanya</a>
+						We did a blind test, considering the taste of the two chocolate milks of Lewis Road and Puhoi Valley. Comes out that per datum of now, the Puhoi Valley Chocolate Milk is extremely richer in taste...</p>
+						<a href="#">Crying over copied milk: Lewis Road versus Puhoi Valley | The Register · 5 days ago</a>
+					</article>
+
+					<article>
+						<img src="http://placehold.it/29x29">
+						<p><a href="#">The Register</a>
+						Hey Richard, we were careful to refer to those places as provincial towns throughout this story. The only place small towns are mentioned is the part talking about an upcoming feature in NZRetail,...</p>
+						<a href="#">Crying over copied milk: Lewis Road versus Puhoi Valley | The Register · 5 days ago</a>
+					</article>
+
+					<article>
+						<img src="http://placehold.it/29x29">
+						<p><a href="#">Richard7666</a>
+						Nitpick, but this article seems to refer to anywhere that isn't Auckland as a small town. Invercargill, Hamilton, Hastings, Blenheim...even Blenheim isn't a "small town", it's arguably NZs largest...</p>
+						<a href="#">Southland shop owners rally together for workshop on provincial retailing | The Register · 1 week ago</a>
+					</article>
+
+					<article>
+						<img src="http://placehold.it/29x29">
+						<p><a href="#">MrsC</a>
+						Way to go Tonii!!!</p>
+						<a href="#">About Face: From digital to physical | The Register · 1 week ago</a>
+					</article>
+
+					<article>
+						<img src="http://placehold.it/29x29">
+						<p><a href="#">MrsC</a>
+						And, be nice to all customers as they walk in - greet them, engage with them. People are far less likely to steal if they know you, and hey can't steal while you're engaging them in conversation....</p>
+						<a href="#">Theft: The New Zealand retail industry’s $1.3 billion problem | The Register · 1 week ago</a>
+					</article>
+				</section>
+
+				<section id="top-5">
+					<h1>Top 5 storeis</h1>
+					<div>
+						<article>
+							<img src="http://placehold.it/96x72">
+							<h1><a href="#">Real Groovy gets its groove on in a new location</a></h1>
+						</article>
+
+						<article>
+							<img src="http://placehold.it/96x72">
+							<h1><a href="#">Southland shop owners rally together to overcome provincial retail challenges</a></h1>
+						</article>
+
+						<article>
+							<img src="http://placehold.it/96x72">
+							<h1><a href="#">Ethical clothing companies revealed: Just Jeans, Valley Girl, Glassons and other retailers fail test</a></h1>
+						</article>
+
+						<article>
+							<img src="http://placehold.it/96x72">
+							<h1><a href="#">Bright young things: Meet six retail superstars</a></h1>
+						</article>
+
+						<article>
+							<img src="http://placehold.it/96x72">
+							<h1><a href="#">What it's like opening a business when you're young, a woman and Asian</a></h1>
+						</article>		
+					</div>
+
+
+				</section>
+			</div>
+
+			<div id="right">
+				<section id="sponsers">
+					<h1>Gold sponsors</h1>
+				</section>
+					<article>
+						
+					</article>
+
+			</div>
 		</div>
 
 
