Added property extra

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				</section>
 
 				<section id="top-5">
-					<h1>Top 5 storeis</h1>
+					<h1>Top 5 stories</h1>
 					<div>
 						<article>
 							<img src="http://placehold.it/96x72">
@@ -166,18 +166,54 @@
 							<h1><a href="#">What it's like opening a business when you're young, a woman and Asian</a></h1>
 						</article>		
 					</div>
-
-
 				</section>
 			</div>
 
 			<div id="right">
 				<section id="sponsers">
 					<h1>Gold sponsors</h1>
+					<img src="http://placehold.it/100x100">
+					<img src="http://placehold.it/100x100">	
+					<img src="http://placehold.it/100x100">
+
+					<img src="http://placehold.it/100x100">	
+					<img src="http://placehold.it/100x100">	
+					<img src="http://placehold.it/100x100">
+
+					<img src="http://placehold.it/100x100">	
+					<img src="http://placehold.it/100x100">	
+					<img src="http://placehold.it/100x100">	
 				</section>
-					<article>
-						
-					</article>
+
+				<section id="advert">
+				<img src="http://placehold.it/300x250">
+				<img src="http://placehold.it/300x250">
+				</section>
+
+				<section id="property">
+					<h1>Retail property listings <span>brought to you by Baleys</span></h1>
+					<div>
+						<img src="http://placehold.it/115x90">
+						<p><a href="#">Make a Splash on Ponsonby Road – Auckland
+						<span>Rare opportunity to secure a large retail tenancy on Ponsonby Road. Stunning full height glazing and wide frontage make an impact to passer-bys and drivers on this busy location.</span></a></p>
+
+						<img src="http://placehold.it/115x90">
+						<p><a href="#">High Street Hot Spot for Lease - Auckland
+						<span>This stunning character space is a rare find on the strip of Auckland's busiest fashion precinct with brands including Barkers, 3 Wise Men, Ruby, Moochi, Calvin Klein Jeans and many more.</span></a></p>
+
+						<img src="http://placehold.it/115x90">
+						<p><a href="#">Landlord Looking For a New Direction - Auckland
+						<span>278m² interior plus 130m² North facing courtyard on Picton Street in Howick ready to be used for hospitality, retail or commercial purposes.</span></a></p>
+
+						<img src="http://placehold.it/115x90">
+						<p><a href="#">Café opportunity at Ministry of Health – Wellington
+						<span>Brand new opportunity to operate the Ministry of Health café opening Oct/Nov 2016. With 1,200 staff and 1,500 visitors per month this opportunity is not to be missed.</span></a></p>
+
+						<img src="http://placehold.it/115x90">
+						<p><a href="#">Food Retail in Andersons Bay - Dunedin
+						<span>New build, with existing consent for food retailing and signage, excellent opportunity for an existing or new food retailer, alongside other successful national tenants including Subway, Pita Pit, Wendys, Smith City and Burger King.</span></a></p>
+					</div>
+				</section>
 
 			</div>
 		</div>
